ItemService finished maybe need some refactoring

--- a/Abay/Controller/Controller.csproj
+++ b/Abay/Controller/Controller.csproj
@@ -41,13 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InsertTesting.cs" />
+    <Compile Include="CategoryController.cs" />
+    <Compile Include="ItemController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj">
       <Project>{f8d23f02-987f-4bb4-8b10-27c8ca992194}</Project>
       <Name>Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{dd2a39c5-84df-42e2-a1a5-0d0e4ae807da}</Project>
+      <Name>Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
