--- a/Abay/Database/Database.csproj
+++ b/Abay/Database/Database.csproj
@@ -45,9 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBCategory.cs" />
     <Compile Include="DBConnection.cs" />
+    <Compile Include="DBItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestInsert.cs" />
+    <Compile Include="DBUser.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{dd2a39c5-84df-42e2-a1a5-0d0e4ae807da}</Project>
+      <Name>Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
