--- a/Abay/Entities/Entities.csproj
+++ b/Abay/Entities/Entities.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Bid.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
