--- a/Abay/Database/Database.csproj
+++ b/Abay/Database/Database.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBBid.cs" />
     <Compile Include="DBCategory.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="DBItem.cs" />
