--- a/Abay/Database/Database.csproj
+++ b/Abay/Database/Database.csproj
@@ -50,8 +50,10 @@
     <Compile Include="DBCategory.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="DBItem.cs" />
+    <Compile Include="DBToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DBUser.cs" />
+    <Compile Include="Security.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
