--- a/Abay/Entities/Entities.csproj
+++ b/Abay/Entities/Entities.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="ItemCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Token.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
