--- a/Abay/ServiceLibrary/ServiceLibrary.csproj
+++ b/Abay/ServiceLibrary/ServiceLibrary.csproj
@@ -45,12 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BidService.cs" />
+    <Compile Include="ServiceInterfaces\ITokenService.cs" />
     <Compile Include="ServiceInterfaces\IBidService.cs" />
     <Compile Include="ServiceInterfaces\IItemService.cs" />
     <Compile Include="ItemService.cs" />
-    <Compile Include="ServiceInterfaces\IUserLogin.cs" />
+    <Compile Include="ServiceInterfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserLogin.cs" />
+    <Compile Include="TokenService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
