--- a/AbayMVC/AbayMVC/Web.config
+++ b/AbayMVC/AbayMVC/Web.config
@@ -91,10 +91,12 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IItemService" />
         <binding name="BasicHttpBinding_IBidService" />
+        <binding name="BasicHttpBinding_IUserService" />
       </basicHttpBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_IItemService" />
         <binding name="NetTcpBinding_IBidService" />
+        <binding name="NetTcpBinding_IUserService" />
       </netTcpBinding>
     </bindings>
     <client>
@@ -114,6 +116,16 @@
       <endpoint address="net.tcp://localhost:8050/Bid" binding="netTcpBinding"
         bindingConfiguration="NetTcpBinding_IBidService" contract="BidServiceReference.IBidService"
         name="NetTcpBinding_IBidService">
+        <identity>
+          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8000/Login" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IUserService" contract="UserServiceReference.IUserService"
+        name="BasicHttpBinding_IUserService" />
+      <endpoint address="net.tcp://localhost:8010/Login" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_IUserService" contract="UserServiceReference.IUserService"
+        name="NetTcpBinding_IUserService">
         <identity>
           <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
         </identity>
