--- a/AbayMVC/AbayMVC/Web.config
+++ b/AbayMVC/AbayMVC/Web.config
@@ -26,6 +26,10 @@
     </customErrors>
     -->
     
+  <authentication mode="Forms">
+    <forms loginUrl="~/Account/Login"></forms>
+  </authentication>
+    
   </system.web>
   
   <runtime>
@@ -127,7 +131,7 @@
         bindingConfiguration="NetTcpBinding_IUserService" contract="UserServiceReference.IUserService"
         name="NetTcpBinding_IUserService">
         <identity>
-          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
+          <userPrincipalName value="DESKTOP-GIJJAIK\VGrzo" />
         </identity>
       </endpoint>
     </client>
