--- a/AbayMVC/AbayMVC/Web.config
+++ b/AbayMVC/AbayMVC/Web.config
@@ -20,11 +20,11 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
     
-    <!--
-    <customErrors mode="On" defaultRedirect="~/ErrorHandler/Index">
-      <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>
+    
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/Index" statusCode="404" />
     </customErrors>
-    -->
+    
     
   <authentication mode="Forms">
     <forms loginUrl="~/Account/Login"></forms>
@@ -131,7 +131,7 @@
         bindingConfiguration="NetTcpBinding_IUserService" contract="UserServiceReference.IUserService"
         name="NetTcpBinding_IUserService">
         <identity>
-          <userPrincipalName value="DESKTOP-GIJJAIK\VGrzo" />
+          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
         </identity>
       </endpoint>
     </client>
