--- a/Abay/ServiceLibrary/ServiceLibrary.csproj
+++ b/Abay/ServiceLibrary/ServiceLibrary.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ServiceInterfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
+    <Compile Include="ValidateInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Controller\Controller.csproj">
