--- a/Abay/Controller/Controller.csproj
+++ b/Abay/Controller/Controller.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenController.cs" />
     <Compile Include="UserController.cs" />
+    <Compile Include="ValidateInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj">
