--- a/AbayMVC/AbayMVC/Web.config
+++ b/AbayMVC/AbayMVC/Web.config
@@ -104,16 +104,6 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8020/Item" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IItemService" contract="ItemServiceReference.IItemService"
-        name="BasicHttpBinding_IItemService" />
-      <endpoint address="net.tcp://localhost:8030/Item" binding="netTcpBinding"
-        bindingConfiguration="NetTcpBinding_IItemService" contract="ItemServiceReference.IItemService"
-        name="NetTcpBinding_IItemService">
-        <identity>
-          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
-        </identity>
-      </endpoint>
       <endpoint address="http://localhost:8040/Bid" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IBidService" contract="BidServiceReference.IBidService"
         name="BasicHttpBinding_IBidService" />
@@ -121,7 +111,17 @@
         bindingConfiguration="NetTcpBinding_IBidService" contract="BidServiceReference.IBidService"
         name="NetTcpBinding_IBidService">
         <identity>
-          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
+          <userPrincipalName value="DESKTOP-GIJJAIK\VGrzo" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8020/Item" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IItemService" contract="ItemServiceReference.IItemService"
+        name="BasicHttpBinding_IItemService" />
+      <endpoint address="net.tcp://localhost:8030/Item" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_IItemService" contract="ItemServiceReference.IItemService"
+        name="NetTcpBinding_IItemService">
+        <identity>
+          <userPrincipalName value="DESKTOP-GIJJAIK\VGrzo" />
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8000/Login" binding="basicHttpBinding"
@@ -131,7 +131,7 @@
         bindingConfiguration="NetTcpBinding_IUserService" contract="UserServiceReference.IUserService"
         name="NetTcpBinding_IUserService">
         <identity>
-          <userPrincipalName value="DESKTOP-ELSJ1KV\Tollo" />
+          <userPrincipalName value="DESKTOP-GIJJAIK\VGrzo" />
         </identity>
       </endpoint>
     </client>
