--- a/AbayDC/App.config
+++ b/AbayDC/App.config
@@ -7,9 +7,11 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IUserService" />
+                <binding name="BasicHttpBinding_IItemService" />
             </basicHttpBinding>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IUserService" />
+                <binding name="NetTcpBinding_IItemService" />
             </netTcpBinding>
         </bindings>
         <client>
@@ -19,6 +21,16 @@
             <endpoint address="net.tcp://localhost:8010/Login" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IUserService" contract="UserServiceReference.IUserService"
                 name="NetTcpBinding_IUserService">
+                <identity>
+                    <userPrincipalName value="DESKTOP-MJQ6GNS\Marton" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8020/Item" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IItemService" contract="ItemServiceReference.IItemService"
+                name="BasicHttpBinding_IItemService" />
+            <endpoint address="net.tcp://localhost:8030/Item" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IItemService" contract="ItemServiceReference.IItemService"
+                name="NetTcpBinding_IItemService">
                 <identity>
                     <userPrincipalName value="DESKTOP-MJQ6GNS\Marton" />
                 </identity>
