--- a/Abay/Test/Test.csproj
+++ b/Abay/Test/Test.csproj
@@ -53,7 +53,10 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WCFTest.cs" />
+    <Compile Include="TestHelper.cs" />
+    <Compile Include="ItemTest.cs" />
+    <Compile Include="UserTest.cs" />
+    <Compile Include="BidTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
