changed some images

--- a/AbayMVC/AbayMVC/AbayMVC.csproj
+++ b/AbayMVC/AbayMVC/AbayMVC.csproj
@@ -239,15 +239,14 @@
     <Content Include="Images\Banner\fashion_banner.png" />
     <Content Include="Images\Banner\mens_banner.png" />
     <Content Include="Images\Banner\womens_banner.png" />
-    <Content Include="Images\Categorys\belts.png" />
-    <Content Include="Images\Categorys\clothes.png" />
-    <Content Include="Images\Categorys\fine_jewelry.png" />
-    <Content Include="Images\Categorys\jewelry.png" />
-    <Content Include="Images\Categorys\mens_clothing.png" />
-    <Content Include="Images\Categorys\mens_shoes.png" />
-    <Content Include="Images\Categorys\s-l500.jpg" />
-    <Content Include="Images\Categorys\watches.png" />
-    <Content Include="Images\Categorys\womens_shoes.png" />
+    <Content Include="Images\Categorys\business.jpg" />
+    <Content Include="Images\Categorys\clothing.jpg" />
+    <Content Include="Images\Categorys\collectibles.jpg" />
+    <Content Include="Images\Categorys\electronics.jpg" />
+    <Content Include="Images\Categorys\garden.jpg" />
+    <Content Include="Images\Categorys\motor.jpg" />
+    <Content Include="Images\Categorys\sports.jpg" />
+    <Content Include="Images\Categorys\toys.jpg" />
     <Content Include="Images\email.png" />
     <Content Include="Images\ItemsOnSell\819VYzO3Y1L._UY606_.jpg" />
     <Content Include="Images\ItemsOnSell\81p2X1FNrJL._UX522_.jpg" />
